tests/errors/type_check/place_typing/place_unknown_var.err.expected
error: at 4:13: [TC-UndeclaredVariable] In function 'f', block 'entry': Use of undeclared variable 'x'
   |
 4 |             x = 42;
   |             ^^^^^^
